--- a/Project/css/style.css
+++ b/Project/css/style.css
@@ -3,3 +3,21 @@
  * Revision History
  * 		Steven Bulgin, 2016.04.02: Created
  */
+
+ #searchbox {
+ 	position:fixed !Important;
+ 	top:8% !Important;   
+ 	z-index: 2 !Important;
+ 	// width: 100% !Important;
+ 	/*** digging out jq settings */
+ 	border-width: 0 !Important;
+    overflow: visible !Important;
+    overflow-x: hidden !Important;
+   // padding: 1em !Important;
+ }
+
+
+#pageContacts {
+	padding-top:80px !Important;
+}
+
