--- a/Project/css/style.css
+++ b/Project/css/style.css
@@ -4,9 +4,32 @@
  * 		Steven Bulgin, 2016.04.02: Created
  */
 
+.fontColorChange{
+	font-weight: normal;
+}
+.backGround{
+}
+
+#pageHome,#pageSettings,#pageContacts,#pageAdd {
+	background-size: cover;
+	-moz-background-size: cover;
+	-o-background-size: cover;
+	-webkit-background-size: cover;
+}
+#lvHome li{
+
+
+}
+label.error{
+	color: #F00;
+	font-weight: bold;
+}
+
+
+
  #searchbox {
  	position:fixed !Important;
- 	top:8% !Important;   
+ 	top:3em !Important;   
  	z-index: 2 !Important;
  	// width: 100% !Important;
  	/*** digging out jq settings */
