--- a/Project/css/style.css
+++ b/Project/css/style.css
@@ -10,6 +10,11 @@
 .backGround{
 }
 
+#emaild a {
+	text-decoration: none;
+	color: black;
+}
+
 #pageHome,#pageSettings,#pageContacts,#pageAdd {
 	background-size: cover;
 	-moz-background-size: cover;
